# swift-foundation

./: Evolution.md  Package.swift
Benchmarks/Benchmarks/String/: BenchmarkString.swift
Proposals/: 0007-swift-subprocess.md
Sources/: CMakeLists.txt
Sources/FoundationEssentials/: CMakeLists.txt  Platform.swift
Sources/FoundationEssentials/Calendar/: Calendar.swift  Calendar_Gregorian.swift  RecurrenceRule.swift
Sources/FoundationEssentials/Data/: Data+Writing.swift
Sources/FoundationEssentials/FileManager/: FileManager+Files.swift  FileOperations.swift
Sources/FoundationEssentials/JSON/: JSONDecoder.swift  JSONEncoder.swift
Sources/FoundationEssentials/Locale/: Locale+Components.swift
Sources/FoundationEssentials/ProcessInfo/: ProcessInfo.swift
Sources/FoundationEssentials/String/: String+Path.swift
Sources/FoundationInternationalization/Calendar/: Calendar_ICU.swift
Sources/FoundationInternationalization/Formatting/Number/: IntegerParseStrategy.swift
Sources/FoundationMacros/: CMakeLists.txt
Sources/TestSupport/: TestSupport.swift
Tests/FoundationEssentialsTests/: BufferViewTests.swift  GregorianCalendarTests.swift  ResourceUtilities.swift
Tests/FoundationEssentialsTests/Formatting/: BinaryInteger+FormatStyleTests.swift
Tests/FoundationInternationalizationTests/: CalendarRecurrenceRuleTests.swift  CalendarTests.swift
